# atc-sim

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: README.md
include/: dataset.h  pqueue.h  render.h  rng.h  sim.h  types.h
src/: dataset.c  main.c  pqueue.c  render.c  rng.c  sim.c
tests/: test_core.c
